Corrected alignment issue between services and about section

--- a/alpha-corsi-website/styles/utils.module.css
+++ b/alpha-corsi-website/styles/utils.module.css
@@ -1,5 +1,7 @@
 .mainContainer {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero {
@@ -199,9 +201,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 150vh;
 }
 
 .accolades {
@@ -210,7 +211,6 @@
 }
 
 .accolades .C10Icon {
-
 }
 
 .accolades .text {
